fix: align GridSection with detroit updates

--- a/src/global/text.scss
+++ b/src/global/text.scss
@@ -97,7 +97,6 @@ h1.title {
   @apply block;
   @apply text-primary;
   @apply font-semibold;
-  cursor: pointer;
 }
 
 .pill {
